# generated/models/get_current_druid_sokbody.go
@@ -1,0 +1,39 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"strconv"
+
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+)
+
+// GetCurrentDRUIDSOKBody get current d r uids o k body
+// swagger:model getCurrentDRUidsOKBody
+type GetCurrentDRUIDSOKBody []Identifiers
+
+// Validate validates this get current d r uids o k body
+func (m GetCurrentDRUIDSOKBody) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	for i := 0; i < len(m); i++ {
+
+		if err := m[i].Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName(strconv.Itoa(i))
+			}
+			return err
+		}
+
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
