# generated/restapi/operations/get_identifiers_info_responses.go
@@ -1,0 +1,60 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/sul-dlss-labs/id-proxy-api/generated/models"
+)
+
+// GetIdentifiersInfoOKCode is the HTTP code returned for type GetIdentifiersInfoOK
+const GetIdentifiersInfoOKCode int = 200
+
+/*GetIdentifiersInfoOK Get a list of identifier types & sources supported
+
+swagger:response getIdentifiersInfoOK
+*/
+type GetIdentifiersInfoOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload models.Sources `json:"body,omitempty"`
+}
+
+// NewGetIdentifiersInfoOK creates GetIdentifiersInfoOK with default headers values
+func NewGetIdentifiersInfoOK() *GetIdentifiersInfoOK {
+	return &GetIdentifiersInfoOK{}
+}
+
+// WithPayload adds the payload to the get identifiers info o k response
+func (o *GetIdentifiersInfoOK) WithPayload(payload models.Sources) *GetIdentifiersInfoOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get identifiers info o k response
+func (o *GetIdentifiersInfoOK) SetPayload(payload models.Sources) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetIdentifiersInfoOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	payload := o.Payload
+	if payload == nil {
+		payload = make(models.Sources, 0, 50)
+	}
+
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+
+}
