# generated/restapi/operations/get_identifiers_list_responses.go
@@ -1,0 +1,60 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/sul-dlss-labs/id-proxy-api/generated/models"
+)
+
+// GetIdentifiersListOKCode is the HTTP code returned for type GetIdentifiersListOK
+const GetIdentifiersListOKCode int = 200
+
+/*GetIdentifiersListOK Get a list of all Identifiers minted across types
+
+swagger:response getIdentifiersListOK
+*/
+type GetIdentifiersListOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload models.Sources `json:"body,omitempty"`
+}
+
+// NewGetIdentifiersListOK creates GetIdentifiersListOK with default headers values
+func NewGetIdentifiersListOK() *GetIdentifiersListOK {
+	return &GetIdentifiersListOK{}
+}
+
+// WithPayload adds the payload to the get identifiers list o k response
+func (o *GetIdentifiersListOK) WithPayload(payload models.Sources) *GetIdentifiersListOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get identifiers list o k response
+func (o *GetIdentifiersListOK) SetPayload(payload models.Sources) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetIdentifiersListOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	payload := o.Payload
+	if payload == nil {
+		payload = make(models.Sources, 0, 50)
+	}
+
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+
+}
