# generated/restapi/operations/mint_new_druid_s_responses.go
@@ -1,0 +1,60 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/sul-dlss-labs/id-proxy-api/generated/models"
+)
+
+// MintNewDRUIDSOKCode is the HTTP code returned for type MintNewDRUIDSOK
+const MintNewDRUIDSOKCode int = 200
+
+/*MintNewDRUIDSOK New DRUIDs Created
+
+swagger:response mintNewDRUidsOK
+*/
+type MintNewDRUIDSOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload models.Identifiers `json:"body,omitempty"`
+}
+
+// NewMintNewDRUIDSOK creates MintNewDRUIDSOK with default headers values
+func NewMintNewDRUIDSOK() *MintNewDRUIDSOK {
+	return &MintNewDRUIDSOK{}
+}
+
+// WithPayload adds the payload to the mint new d r uids o k response
+func (o *MintNewDRUIDSOK) WithPayload(payload models.Identifiers) *MintNewDRUIDSOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the mint new d r uids o k response
+func (o *MintNewDRUIDSOK) SetPayload(payload models.Identifiers) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *MintNewDRUIDSOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	payload := o.Payload
+	if payload == nil {
+		payload = make(models.Identifiers, 0, 50)
+	}
+
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+
+}
