# swagger.json
@@ -1,18 +1,87 @@
 {
   "swagger": "2.0",
   "info": {
-    "description": "Template Application",
     "version": "0.1.0",
-    "title": "app",
-    "license": {
-      "name": "Apache 2.0",
-      "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+    "title": "identifier",
+    "description": "An API for providing identifiers.",
+    "contact": {
+      "name": "Christina Harlow",
+      "email": "cmharlow@stanford.edu"
     }
   },
-  "host": "app.dlss.stanford.edu",
+  "host": "identifiers.dlss.stanford.edu",
   "basePath": "/v1",
   "schemes": ["http"],
+  "produces": ["application/json", "text/text"],
   "paths": {
+    "/identifiers": {
+      "get": {
+        "operationId": "getIdentifiersInfo",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "Get a list of identifier types & sources supported",
+            "schema": {
+                "$ref": "#/definitions/Sources"
+            }
+          }
+        }
+      }
+    },
+    "/identifiers/all": {
+      "get": {
+        "operationId": "getIdentifiersList",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "Get a list of all Identifiers minted across types",
+            "schema": {
+              "$ref": "#/definitions/Sources"
+            }
+          }
+        }
+      }
+    },
+    "/identifiers/druids": {
+      "get": {
+        "operationId": "getCurrentDRUIDs",
+        "responses": {
+          "200": {
+            "description": "List of DRUIDs currently being used",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Identifiers"
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "operationId": "mintNewDRUIDs",
+        "parameters": [
+          {
+            "in": "query",
+            "name": "quantity",
+            "required": false,
+            "type": "integer",
+            "description": "Number of DRUIDs to mint. Default is 1."
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "New DRUIDs Created",
+            "schema": {
+              "$ref": "#/definitions/Identifiers"
+            }
+          }
+        }
+      }
+    },
     "/healthcheck": {
       "get": {
          "summary": "Health Check",
@@ -36,6 +105,39 @@
     }
   },
   "definitions": {
+    "Source": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "template": {
+          "type": "string"
+        }
+      },
+      "required": ["name", "template"]
+    },
+    "Sources": {
+      "type": "array",
+      "items": {
+        "$ref" : "#/definitions/Source"
+      }
+    },
+    "Identifier": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string"
+        }
+      },
+      "required": ["id"]
+    },
+    "Identifiers": {
+      "type": "array",
+      "items": {
+        "$ref" : "#/definitions/Identifier"
+      }
+    },
     "HealthCheckResponse": {
       "type": "object",
       "properties": {
@@ -46,41 +148,6 @@
       },
       "example": {
         "status": "OK"
-      }
-    },
-    "ErrorResponse": {
-      "type": "object",
-      "properties": {
-        "errors": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/Error"
-          }
-        }
-      }
-    },
-    "Error" : {
-      "type": "object",
-      "properties": {
-        "title": {
-          "type": "string",
-          "description": "a short, human-readable summary of the problem that SHOULD NOT change from occurrence to occurrence of the problem.",
-          "example": "Invalid Attribute"
-        },
-        "detail": {
-          "type": "string",
-          "description": "a human-readable explanation specific to this occurrence of the problem.",
-          "example": "Title must contain at least three characters."
-        },
-        "source": {
-          "type": "object",
-          "properties": {
-            "pointer": {
-              "type": "string",
-              "example": "/data/attributes/title"
-            }
-          }
-        }
       }
     }
   }
